[package]
name = "arrakis-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy_life = { version = "0.4.0", features = ["auto-coloring"] }
rand = "0.8.5"
